--- a/style.css
+++ b/style.css
@@ -7,17 +7,22 @@ body{
     font-family: sans-serif;
     color: #444;
     border-top: 10px solid #76c2ce;
+    position: relative;
 }
 
 .container{
-    width: 700px;
+    width: 800px;
+    margin: 0 auto;
+    
 }
 
 .main-header{
+    
     background-color: #f7f7f7;
+    background-color: red;
     padding: 20px 40px;
     margin-bottom: 60px;
-    height: 80px;
+    /* height: 80px; */
 }
 
 aside {
@@ -36,7 +41,30 @@ article{
 
 .post-header{
     margin-bottom: 30px;
+    /* position: relative; */
 }
+
+/* # for the ids */
+#author{
+    font-style: italic;
+    font-size: 18px;
+}
+
+
+#copyright{
+    font-size: 16px;
+    }
+    
+/* . for the class */
+.related-author{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.related{
+    list-style: none;
+}
+
 
 h1, h2, h3{
     color:#76c2ce;
@@ -79,35 +107,8 @@ ul,ol{
 
 li{
     font-size: 20px;
-    margin-bottom: 10px
+    margin-bottom: 10px;
 }
-
-li:last-child{
-    margin-bottom: 0;
-}
-
-
-/* # for the ids */
-#author{
-    font-style: italic;
-    font-size: 18px;
-}
-
-
-#copyright{
-    font-size: 16px;
-    }
-    
-/* . for the class */
-.related-author{
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.related{
-    list-style: none;
-}
-
 
 
 li:first-child{
@@ -116,6 +117,7 @@ li:first-child{
 
 li:last-child{
     font-style: italic;
+    margin-bottom: 0;
 }
 
 li:nth-child(2){
@@ -144,9 +146,85 @@ a:active{
 
 .post-image{
     width: 100%;
+    height: auto;
 }
 
 
+nav a:link{
+    margin-right: 30px;
+    margin-top: 10px;
+    display: inline-block;
+}
 
-/* LVHA */
+nav a:link:last-child{
+    margin-right: 0;
+}
 
+button{
+    font-size: 22px;
+    padding: 20px;
+    cursor: pointer;
+
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+/* sudo elements are written with :: and sudo classes with : */
+h1::first-letter{
+    font-style: normal;
+    margin-right: 5px;
+}
+
+/* adjecond elements (elements that have same parent and are right after the choosen element) */
+/* here we look for the first p element right after h3 element and color p::first-line  red */
+h3 + p::first-line{
+    color: red;
+}
+
+/* p::first-line{
+    color: red;
+} */
+
+h2{
+    position: relative;
+}
+
+h2::after{
+    content: "TOP";
+    background-color: #ffe70e;
+    color: #444;
+    font-size: 16px;
+    font-weight: bold;
+    display:  inline-block;
+    padding: 5px 10px;
+    position: absolute;
+    top: -15px;
+    right: -25px;
+}
+
+/* floats */
+.author-img{
+    float: left;
+    margin-bottom: 20px;
+}
+
+.author{
+    float: left;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+h1{
+    float: left;
+}
+
+nav{
+    float: right;
+}
+
+.clearfix::after{
+    content: "";
+    clear: both;
+    display: block;
+}
