--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -11,7 +12,7 @@ body{
 }
 
 .container{
-    width: 800px;
+    width: 1200px;
     margin: 0 auto;
     
 }
@@ -19,7 +20,7 @@ body{
 .main-header{
     
     background-color: #f7f7f7;
-    background-color: red;
+    
     padding: 20px 40px;
     margin-bottom: 60px;
     /* height: 80px; */
@@ -29,8 +30,9 @@ aside {
     background-color: #f7f7f7;
     border-top: 5px solid #76c2ce;
     border-bottom: 5px solid #76c2ce;
-    padding: 50px 0;
-    width: 500px;
+    padding: 50px 40px;
+
+
 }
 
 article{
@@ -63,6 +65,7 @@ article{
 
 .related{
     list-style: none;
+    margin-left: 0;
 }
 
 
@@ -92,6 +95,7 @@ h4{
     font-size: 20px;
     text-transform: uppercase;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 p{
@@ -228,3 +232,22 @@ nav{
     clear: both;
     display: block;
 }
+
+
+article{
+    
+    width: 825px;
+    float: left;
+}
+
+aside{
+    
+    width: 300px;
+    float: right;
+}
+
+footer{
+    
+    clear: both;
+}
+
