--- a/style.css
+++ b/style.css
@@ -31,12 +31,12 @@ aside {
     border-top: 5px solid #76c2ce;
     border-bottom: 5px solid #76c2ce;
     padding: 50px 40px;
-
-
+    
+    flex: 0 0 300px;
 }
 
 article{
-    margin-bottom: 60px;
+    flex:1;
 }
 
 
@@ -50,6 +50,8 @@ article{
 #author{
     font-style: italic;
     font-size: 18px;
+    margin-bottom: 0;
+    margin-left: 15px;
 }
 
 
@@ -59,8 +61,9 @@ article{
     
 /* . for the class */
 .related-author{
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 14px;
+    font-style: italic;
+    margin-bottom: 0;
 }
 
 .related{
@@ -92,7 +95,7 @@ h3{
 
 
 h4{
-    font-size: 20px;
+    font-size: 18px;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 30px;
@@ -156,7 +159,6 @@ a:active{
 
 nav a:link{
     margin-right: 30px;
-    margin-top: 10px;
     display: inline-block;
 }
 
@@ -208,7 +210,7 @@ h2::after{
 }
 
 /* floats */
-.author-img{
+/* .author-img{
     float: left;
     margin-bottom: 20px;
 }
@@ -250,4 +252,45 @@ footer{
     
     clear: both;
 }
+ */
+/* 
+nav{
+    display: flex;
+    justify-items: flex-end;
+} */
 
+ .main-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+ }
+
+ .author-info{
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+ }
+
+ .related-post{
+    display: flex;
+    align-items: center;
+    gap:20px;
+    margin-bottom: 30px;
+    /* width: 300px; */
+
+ }
+
+.related-link:link{
+    font-size: 17px;
+    font-weight: bold;
+    font-style: normal;
+    margin-bottom: 5px;
+    display: block;
+}
+
+section{
+    display: flex;
+    align-items: flex-start;
+    gap: 75px;
+    margin-bottom: 50px;
+}
