--- a/omnifood/css/how-it-works.css
+++ b/omnifood/css/how-it-works.css
@@ -2,57 +2,55 @@
   padding: 9.6rem 0;
 }
 
-.container {
-  max-width: 120rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
 }
 
-.grid {
-  display: grid;
-  gap: 9.6rem;
-}
-
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.grid--4-cols {
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.heading-primary,
-.heading-secondary {
-  font-weight: 700;
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
   color: #333;
-  letter-spacing: -0.5px;
-}
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1.05;
-  margin-bottom: -0.5px;
-}
-
-.heading-secondary {
-  font-size: 4.4rem;
-  line-height: 1.2;
-  margin-bottom: 9.6rem;
-}
-
-.subheading {
-  display: block;
-  font-size: 2rem;
-  font-weight: 500;
-  color: rgb(207, 113, 31);
-  text-transform: uppercase;
-  margin-bottom: 1.6rem;
-  letter-spacing: 0.75px;
 }
 
 .step-img {
-  width: 50%;
+  width: 35%;
+}
+
+.step-img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+}
+
+.step-img-box::before {
+  background-color: #fdf2e9;
+  width: 60%;
+  z-index: -2;
+
+  /* 60% of parent's width */
+  padding-bottom: 60%;
+  /* elements with higher z-index apears first */
+}
+
+.step-img-box::after {
+  z-index: -1;
+  background-color: #fae5d3;
+  width: 45%;
+  padding-bottom: 45%;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
