--- a/omnifood/css/general.css
+++ b/omnifood/css/general.css
@@ -21,7 +21,7 @@ Paragraph default: 1.6
 - Primary: #e67e22
 - Tints:: #fdf2e9, #fae5d3
 - Shades: #cf711f
-- Accents:
+- Accents:#51cf66, #a9e34b, #ffe066
 - Greys: #555, #333, #888
 
 --- 05 SHADOWS
