--- a/omnifood/css/meals.css
+++ b/omnifood/css/meals.css
@@ -15,14 +15,17 @@
 }
 
 .meal-title {
-  font-size: 2rem;
+  font-size: 2.4em;
+  font-weight: 700;
   color: #333;
+  text-align: start;
+  margin: 1.2rem 0 2rem 0;
 }
 
 .meal-content {
+  padding: 2.4rem 4.8rem;
 }
-.tag {
-}
+
 .meal-attributes {
   display: flex;
   gap: 1.2rem;
@@ -31,6 +34,34 @@
 }
 
 .meal-attribute {
+}
+
+.meal-tags {
+  display: flex;
+  gap: 0.4rem;
+}
+
+.tag {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  color: #333;
+  font-weight: 500;
+
+  padding: 0.4rem 0.8rem;
+  border-radius: 1.4rem;
+}
+
+.tag-vegetarian {
+  background-color: #51cf66;
+}
+
+.tag-paleo {
+  background-color: #ffe066;
+}
+
+.tag-vegan {
+  background-color: #a9e34b;
 }
 
 /* <--------------- diet list -----------------> */
