--- a/omnifood/css/general.css
+++ b/omnifood/css/general.css
@@ -6,6 +6,7 @@
 
 - Font weights:
 Default: 400
+Bold: 600
 
 - Line heights:
 Default: 1
@@ -15,7 +16,7 @@ Paragraph default: 1.6
 
 -Letter spacing
 -05px
-0.75px
+-0.75px
 --- 02 COLORS
 
 - Primary: #e67e22
@@ -27,6 +28,8 @@ Paragraph default: 1.6
 --- 05 SHADOWS
 
 --- 06 BORDER-RADIUS
+small: 9px
+medium: 11px
 
 --- 07 WHITESPACES
 
@@ -94,8 +97,27 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+  color: #e67e22;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: none;
+}
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
 }
 
 .grid {
