--- a/omnifood/css/general.css
+++ b/omnifood/css/general.css
@@ -104,12 +104,13 @@ body {
   text-decoration: none;
   border-bottom: 1px solid currentColor;
   padding-bottom: 2px;
+  transition: all 0.3s;
 }
 
 .link:hover,
 .link:active {
   color: #cf711f;
-  border-bottom: none;
+  border-bottom: 1px solid transparent;
 }
 
 .margin-right-sm {
