--- a/omnifood/css/cta.css
+++ b/omnifood/css/cta.css
@@ -1,12 +1,67 @@
-.img-cta {
-  width: 65%;
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 151, 78, 0.3),
+      rgba(235, 151, 78, 0.3)
+    ),
+    url("../img/eating.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
-.grid-cta {
+.cta {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 65fr 35fr;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+
+  background-color: #e98b38;
+  border-radius: 11px;
+
+  background-image: linear-gradient(to right bottom, #eb984e, #e98b38);
+  overflow: hidden;
+
+  /* TEMP */
+  height: 50rem;
 }
 .cta-text-container {
-  background-color: #e67e22;
-  padding: 4.8rem;
+  color: #45260a;
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+}
+
+.cta-title {
+  color: #45260a;
+  margin-bottom: 3.2rem;
+}
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  color: #333;
+}
+
+.form-cta {
+  row-gap: 2.4rem;
+  column-gap: 3.2rem;
+}
+
+.form-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-item label {
+  color: #45260a;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+
+.form-item input {
+  padding: 1rem;
+  color: #6f6f6f;
+  font-size: 2rem;
+  border-radius: 11px;
+  border: none;
+}
+
+.form-item select {
 }
