--- a/omnifood/css/general.css
+++ b/omnifood/css/general.css
@@ -21,15 +21,15 @@ Paragraph default: 1.6
 --- 02 COLORS
 
 - Primary: #e67e22
-- Tints:: #fdf2e9, #fae5d3
-- Shades: #cf711f
+- Tints:: #fdf2e9, #fae5d3, #eb984e
+- Shades: #cf711f, #45260a
 - Accents:#51cf66, #a9e34b, #ffe066
 - Greys: 
 #6f6f6f (lightest grey allowed)
 #555, #333, #888
 
 --- 05 SHADOWS
-
+box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 --- 06 BORDER-RADIUS
 small: 9px
 medium: 11px
@@ -56,6 +56,12 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+}
+
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
 }
 
 .btn:link,
@@ -183,12 +189,6 @@ body {
   text-transform: uppercase;
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
-}
-
-.container {
-  max-width: 120rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
 }
 
 .center-text {
