--- a/omnifood/css/cta.css
+++ b/omnifood/css/cta.css
@@ -1,5 +1,5 @@
 .section-cta {
-  margin: 6.4rem 0 12.8rem 0;
+  padding: 4.8rem 0 12.8rem;
 }
 .cta-img-box {
   background-image: linear-gradient(
