omnifood unresponsive finish

--- a/omnifood/css/footer.css
+++ b/omnifood/css/footer.css
@@ -1,11 +1,24 @@
+.footer-box {
+  grid-template-columns: 3fr 3fr 2fr 2fr 2fr;
+}
+
 .footer {
   margin-bottom: 9.6rem;
+}
+
+.logo-col,
+.address-col,
+.footer-nav,
+.contacts {
+  display: flex;
+  flex-direction: column;
 }
 
 .social-links {
   list-style: none;
   display: flex;
-  gap: 1.2rem;
+  gap: 2.4rem;
+  margin-top: 2.4rem;
 }
 
 .social-links ion-icon {
@@ -14,5 +27,47 @@
 }
 
 .footer-heading {
+  font-size: 2rem;
+  font-weight: 500;
   margin-bottom: 2.4rem;
+  color: #555;
+}
+
+.footer-nav {
+  gap: 1.8rem;
+}
+
+.footer-nav li a {
+  font-size: 1.6rem;
+  color: #6f6f6f;
+  text-decoration: none;
+}
+
+.contacts {
+  font-style: normal;
+  gap: 2.4rem;
+}
+
+.address {
+  font-size: 1.7rem;
+  line-height: 1.6;
+  color: #555;
+}
+
+.contact-links a {
+  text-decoration: none;
+  color: #6f6f6f;
+  font-size: 1.6rem;
+}
+
+.contact-links a:last-child {
+  display: inline-block;
+  margin-top: 0.8rem;
+}
+
+.copyright {
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+  margin-top: auto;
 }
