--- a/omnifood/css/queries.css
+++ b/omnifood/css/queries.css
@@ -51,6 +51,56 @@ Instead, 1rem = 1em = 16px */
   .main-nav-list {
     gap: 3.2rem;
   }
+
+  .testimonials-content {
+    padding: 9.6rem 3.2rem;
+  }
+}
+
+/* **************************************** */
+/* BELOW 965px (Tablets) */
+/* **************************************** */
+
+@media (max-width: 61em) {
+  html {
+    font-size: 50%;
+  }
+
+  .hero {
+    grid-template-columns: 1fr;
+    padding: 0 8rem;
+  }
+
+  .hero-img {
+    width: 60%;
+    gap: 6.4rem;
+  }
+
+  .hero-text,
+  .hero-img-box {
+    text-align: center;
+  }
+
+  .delivered-meals {
+    justify-content: center;
+    margin-top: 3.2rem;
+  }
+
+  .logos img {
+    height: 2.4rem;
+  }
+
+  .step-number {
+    font-size: 7.4rem;
+  }
+
+  .meal-content {
+    padding: 2.4rem 3.2rem 3.2rem 3.2rem;
+  }
+
+  .cta-text-container {
+    padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+  }
 }
 
 /* - Font size system (px)
