--- a/omnifood/css/header.css
+++ b/omnifood/css/header.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #fdf2e9;
+  position: relative;
 
   /* Because we want to be sticky later */
   height: 9.6rem;
@@ -36,11 +37,31 @@
   border-radius: 1.2rem;
 }
 
+.main-nav-link:link,
+.main-nav-link:visited {
+  color: #333;
+}
+
 .main-nav-link:hover,
 .main-nav-link:active {
   color: #e67e22;
 }
-.main-nav-link:link,
-.main-nav-link:visited {
+
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
   color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
