--- a/omnifood/css/header.css
+++ b/omnifood/css/header.css
@@ -65,3 +65,13 @@
 .icon-mobile-nav[name="close-outline"] {
   display: none;
 }
+
+/* STICKY NAVIGATION */
+.sticky {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(255, 255, 255, 0.97);
+  z-index: 999;
+}
